# kermarreck-plugin

./: CMakeLists.txt  CR-visu-Théo GILBERT-Thomas CORREIA-Simon MERCIER.docx  KermarreckAlgorithm.cpp  KermarreckAlgorithm.h  LICENSE  NodeWalkInfo.cpp  NodeWalkInfo.h  README.md  dataProjetVisu.tlpx
graphs/: barbell.tlpx
