cmake_minimum_required(VERSION 3.7)

# Do not forget to set the following variables :
#CMAKE_MODULE_PATH    -> tulip-install/share/tulip
#QT_QMAKE_EXECUTABLE  -> path to qmake.exe
#TULIP_INCLUDE_DIR    -> tulip-install/include
#QT_INCLUDE_DIR       -> qt-install/include
#TULIP_PLUGINS_PATH   -> tulip-install/lib/tulip
#TULIP_LIBRARY        
#TULIP_QT4_LIBRARY    
#QT_LIBRARIES

# Setting plugin related variables
SET(PLUGIN_NAME "KermarreckCentrality")
SET(TULIP_PLUGIN_VERSION "4.10.0")

FIND_PACKAGE(TULIP REQUIRED)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})

SET(CPP_FILES
        KermarreckAlgorithm.cpp KermarreckAlgorithm.h)

SET(MOC_HEADERS
)

SET(UI_FILES
)

SET(RESOURCE_FILES
)

INCLUDE_DIRECTORIES(${TULIP_INCLUDE_DIR} ${QT_INCLUDE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR})

QT4_WRAP_UI(UI_SRCS ${UI_FILES})
QT4_WRAP_CPP(MOC_SRCS ${MOC_HEADERS})
QT4_ADD_RESOURCES(RCC_SRCS ${RESOURCE_FILES})

ADD_LIBRARY(${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} SHARED ${CPP_FILES} ${UI_SRCS} ${MOC_SRCS} ${RCC_SRCS})

TARGET_LINK_LIBRARIES(${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} ${TULIP_LIBRARY} ${TULIP_OGL_LIBRARY} ${TULIP_QT4_LIBRARY} ${QT_LIBRARIES})

INSTALL(TARGETS ${PLUGIN_NAME}-${TULIP_PLUGIN_VERSION} DESTINATION ${TULIP_PLUGINS_PATH})
